--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
+<head>
+    <meta charset="utf-8">
+    <title>Nihility Hub</title>
+    <link rel="icon" type="image/x-icon" href="/Images/nihility.webp"></head>
 
+<bod>
+
+</bod>
