--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
     <link rel="icon" type="image/x-icon" href="/Images/nihility.webp">
 </head>
 
-<img src="/Images/Nihility Banner.jpg" alt="Nihility">
+<img src="/Images/Nihility Banner.jpg" alt="Nihility" style="width: 100%; height: 100%;">
