--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <meta charset="utf-8">
     <title>Nihility Hub</title>
     <link rel="icon" type="image/x-icon" href="/Images/nihility.webp">
+    <link re="stylesheet" href="style.css"> 
 </head>
 
 <img src="/Images/Nihility Banner.jpg" alt="Nihility" style="width: 100%; height: 100%;">
