--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <head>
     <meta charset="utf-8">
     <title>Nihility Hub</title>
-    <link rel="icon" type="image/x-icon" href="/Images/nihility.webp"></head>
+    <link rel="icon" type="image/x-icon" href="/Images/nihility.webp">
+    <link re="stylesheet" href="style.css"> 
+</head>
 
-<bod>
-
-</bod>
+<img src="/Images/Nihility Banner.jpg" alt="Nihility" style="width: 100%; height: 100%;">
