--- a/index.html
+++ b/index.html
@@ -5,4 +5,6 @@
     <link re="stylesheet" href="style.css"> 
 </head>
 
-<img src="/Images/Nihility Banner.jpg" alt="Nihility" style="width: 100%; height: 100%;">
+<body>
+    <img src="/Images/Nihility Banner.jpg" alt="Nihility" style="width: 100%; height: 100%;">
+</body>
