--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <title>Nihility Hub</title>
     <link rel="icon" type="image/x-icon" href="/Images/nihility.webp">
-    <link re="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css"> 
 </head>
 
 <body>
